<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

     <group
         android:checkableBehavior="single">

         <item
             android:id="@+id/nav_home"
             android:title="@string/home"
             android:icon="@drawable/ic_store_mall_directory_black_24dp"/>
         <item
             android:id="@+id/nav_categories"
             android:title="About"
             android:icon="@drawable/ic_style_black_24dp"/>
     </group>

    <item android:title="Profile">
        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login1"
                    android:title="@string/akun"
                    android:icon="@drawable/ic_vpn_key_black_24dp"/>
                <item
                    android:id="@+id/nav_akun"
                    android:title="@string/login"
                    android:icon="@drawable/ic_account_circle_black_24dp"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logut"
                    android:icon="@drawable/ic_vpn_key_black_24dp"/>

            </group>

        </menu>
    </item>

    <item android:title="Categories">
        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_food"
                    android:title="@string/makan"
                    android:icon="@drawable/ic_restaurant_black_24dp"/>
                <item
                    android:id="@+id/nav_drink"
                    android:title="@string/minum"
                    android:icon="@drawable/ic_free_breakfast_black_24dp"/>
            </group>

        </menu>
    </item>

</menu>